--- a/cs-f.csproj
+++ b/cs-f.csproj
@@ -14,4 +14,19 @@
     <PackageReference Include="Tomlyn" Version="0.19.0" />
   </ItemGroup>
 
+  <ItemGroup>
+    <EmbeddedResource Update="Resources\CodeFormatterStrings.resx">
+      <Generator>ResXFileCodeGenerator</Generator>
+      <LastGenOutput>CodeFormatterStrings.Designer.cs</LastGenOutput>
+    </EmbeddedResource>
+  </ItemGroup>
+
+  <ItemGroup>
+    <Compile Update="Resources\CodeFormatterStrings.Designer.cs">
+      <DesignTime>True</DesignTime>
+      <AutoGen>True</AutoGen>
+      <DependentUpon>CodeFormatterStrings.resx</DependentUpon>
+    </Compile>
+  </ItemGroup>
+
 </Project>
