--- a/cs-f.csproj
+++ b/cs-f.csproj
@@ -13,9 +13,14 @@
     <PackageId>CodeFormatter.DevToys</PackageId>
     <Version>1.0.0</Version>
     <Title>Code Formatter for DevToys</Title>
-    <Authors>cato</Authors>
-    <Description>A DevToys extension that formats code in 17 languages using Ruff, dprint, and Prettier.</Description>
-    <PackageTags>devtoys-app;extension;formatter;code;ruff;dprint;prettier</PackageTags>
+    <Authors>Error0229</Authors>
+    <Description>A DevToys extension that formats code in 18 languages with live auto-formatting. Supports Python, JavaScript, TypeScript, JSON, Markdown, TOML, CSS, SCSS, Less, HTML, Vue, Svelte, Astro, YAML, GraphQL, Dockerfile, Java, and SQL using Ruff, dprint, Prettier, and sql-formatter.</Description>
+    <PackageTags>devtoys-app;extension;formatter;code;ruff;dprint;prettier;python;javascript;typescript;sql</PackageTags>
+    <PackageProjectUrl>https://github.com/Error0229/cs-f</PackageProjectUrl>
+    <RepositoryUrl>https://github.com/Error0229/cs-f</RepositoryUrl>
+    <RepositoryType>git</RepositoryType>
+    <PackageLicenseExpression>MIT</PackageLicenseExpression>
+    <PackageReadmeFile>README.md</PackageReadmeFile>
     <GeneratePackageOnBuild>false</GeneratePackageOnBuild>
   </PropertyGroup>
 
@@ -56,6 +61,11 @@
   <ItemGroup>
     <None Include="Binaries\ruff.exe" Pack="true" PackagePath="runtimes/win-x64/native/" />
     <None Include="Binaries\dprint.exe" Pack="true" PackagePath="runtimes/win-x64/native/" />
+  </ItemGroup>
+
+  <!-- Include README in package -->
+  <ItemGroup>
+    <None Include="README.md" Pack="true" PackagePath="\" />
   </ItemGroup>
 
   <!-- This makes sure to include dependencies of the project into the NuGet package -->
