feat: add Ruby formatter (rufo) support
- Added Ruby enum and extensions to Language.cs
- Added Ruby handling in FormatterService.cs
- Added rufo.exe to NuGet package in cs-f.csproj
- Added Ruby default config in ConfigManager.cs
- Binary: rufo.exe (2.1 MB, built with Ocran + RubyInstaller 3.2.9)

--- a/cs-f.csproj
+++ b/cs-f.csproj
@@ -76,6 +76,7 @@
     <None Include="Binaries\perltidy.exe" Pack="true" PackagePath="runtimes/win-x64/native/" />
     <None Include="Binaries\php-cs-fixer.exe" Pack="true" PackagePath="runtimes/win-x64/native/" />
     <None Include="Binaries\mh_style.exe" Pack="true" PackagePath="runtimes/win-x64/native/" />
+    <None Include="Binaries\rufo.exe" Pack="true" PackagePath="runtimes/win-x64/native/" />
   </ItemGroup>
 
   <!-- Include README and icon in package -->
